--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <body background="preview.gif">
     <div> 这就是主页啦</div>
     <a href="nine.html">九九乘法表</a>
-    <a href="calculate.html">
+    <a href="calculate.html">计算问答题</a>
 </body>
 </html>
