--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body background="preview.gif">
     <div> 这就是主页啦</div>
-    <a href="nine.html">九九乘法表</a>
+    <a href="nine.html">九九乘法表</a><br>
     <a href="calculate.html">计算问答题</a>
 </body>
 </html>
