--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小丁的主页</title>
     <style>
-        .div{
-            font-size : 20px;
-        }
-       div{
+       #title{
         color: rgb(128, 76, 9);
         font-size: 30px;
         text-align: center;
@@ -17,8 +14,9 @@
     </style>
 </head>
 <body background="preview.gif">
-    <div> 这就是主页啦</div>
+    <div id="title"> 这就是主页啦</div>
     <a href="nine.html">九九乘法表</a><br>
     <a href="calculate.html">计算问答题</a>
+    <a href="动态页面.html">添加元素</a>
 </body>
 </html>
