--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body background="preview.gif">
     <div id="title"> 这就是主页啦</div>
     <a href="nine.html">九九乘法表</a><br>
-    <a href="calculate.html">计算问答题</a>
-    <a href="动态页面.html">添加元素</a>
+    <a href="calculate.html">计算问答题</a><br>
+    <a href="动态页面.html">添加元素</a><br>
 </body>
 </html>
