--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="nine.html">九九乘法表</a><br>
     <a href="calculate.html">计算问答题</a><br>
     <a href="动态页面.html">添加元素</a><br>
+    <a href="考试.html">考试代码</a><br>
 </body>
 </html>
